Added additional modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "YOLOv6"]
 	path = YOLOv6
 	url = https://github.com/hectorandac/YOLOv6
+[submodule "YOLOv5"]
+	path = YOLOv5
+	url = git@github.com:ultralytics/yolov5.git
+[submodule "YOLOv8"]
+	path = YOLOv8
+	url = git@github.com:mikel-brostrom/yolov8_tracking.git
